Implemented an ETL to import list User by CSV
