# swagger/openapi.yaml
@@ -153,6 +153,33 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserError'
+
+  /etl/import-csv:
+    post:
+      description: ETL Import Users by CSV file, example CSV line name#surname#email#address
+      operationId: importCSVUsers
+      requestBody:
+        content:
+          application/csv:
+            schema:
+              type: string
+              format: base64
+      responses:
+        '201':
+          description: Successfully imported CSV Users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+
+        '400':
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserError'
 components:
   schemas:
     User:
